@@ -8,6 +8,7 @@
 		<include>CircleItemsSettingsForSkinSettings</include>
 		<include>AddonSettingsForSkinSettings</include>
 		<include>MiscellaneousSettingsForSkinSettings</include>
+		<include>DebugSettingsForSkinSettings</include>
 		
 		<onfocus>Skin.SetBool(RevolveConfiguration)</onfocus>
 	</include>
@@ -16,23 +17,64 @@
 		<onfocus>Skin.SetBool(BackgroundImage.Active)</onfocus>
 		<onfocus>Skin.SetBool(BackgroundImage.Faded)</onfocus>
 		<onfocus>Skin.SetBool(BackgroundVisualiser.Active)</onfocus>
+		<onfocus>Skin.Reset(BackgroundVisualiser.Faded)</onfocus>
 		<onfocus>Skin.SetBool(BackgroundVideo.Active)</onfocus>
+		<onfocus>Skin.Reset(BackgroundVideo.Faded)</onfocus>
 	</include>
 	
 	<include name="HomeMenuItemsSettingsForSkinSettings" description="Home Menu Items Skin Settings">
 		<onfocus>Skin.SetBool(PlayDiscOption.Active)</onfocus>
 		<onfocus>Skin.SetBool(FavouritesOption.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom01Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom02Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom03Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom04Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom05Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom06Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom07Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom08Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom09Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom10Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom11Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom12Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom13Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom14Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom15Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom16Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom17Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom18Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom19Option.Active)</onfocus>
+		<onfocus>Skin.Reset(Custom20Option.Active)</onfocus>
+		<onfocus>Skin.Reset(LiveTVOption.Active)</onfocus>
 		<onfocus>Skin.SetBool(VideosOption.Active)</onfocus>
+		<onfocus>Skin.Reset(VideosOption.Immutable)</onfocus>
+		<onfocus>Skin.Reset(MoviesOption.Active)</onfocus>
+		<onfocus>Skin.Reset(TVShowsOption.Active)</onfocus>
+		<onfocus>Skin.Reset(CustomVideosOption.Active)</onfocus>
 		<onfocus>Skin.SetBool(MusicOption.Active)</onfocus>
+		<onfocus>Skin.Reset(MusicOption.Immutable)</onfocus>
+		<onfocus>Skin.Reset(AlbumsOption.Active)</onfocus>
+		<onfocus>Skin.Reset(CustomMusicOption.Active)</onfocus>
+		<onfocus>Skin.Reset(BooksOption.Active)</onfocus>
 		<onfocus>Skin.SetBool(PicturesOption.Active)</onfocus>
+		<onfocus>Skin.Reset(CustomPicturesOption.Active)</onfocus>
+		<onfocus>Skin.Reset(GamesOption.Active)</onfocus>
+		<onfocus>Skin.Reset(ProgramsOption.Active)</onfocus>
+		<onfocus>Skin.Reset(WeatherOption.Active)</onfocus>
+		<onfocus>Skin.Reset(FileManagerOption.Active)</onfocus>
+		<onfocus>Skin.Reset(AddonsOption.Active)</onfocus>
 		<onfocus>Skin.SetBool(SettingsOption.Active)</onfocus>
 		<onfocus>Skin.SetBool(ExitOption.Active)</onfocus>
 	</include>
 
 	<include name="CircleItemsSettingsForSkinSettings" description="Circle Items Skin Settings">
-		<onfocus>SetString(CircleMovieOption.Source,LatestMovie.%d)</onfocus>
-		<onfocus>SetString(CircleEpisodeOption.Source,LatestEpisode.%d)</onfocus>
-		<onfocus>SetString(CircleAlbumOption.Source,LatestAlbum.%d)</onfocus>
+		<onfocus>Skin.SetString(CircleMovieOption.Name,$LOCALIZE[31721] $LOCALIZE[31711])</onfocus>
+		<onfocus>Skin.SetString(CircleMovieOption.Source,LatestMovie.%d)</onfocus>
+		<onfocus>Skin.SetString(CircleEpisodeOption.Name,$LOCALIZE[31722] $LOCALIZE[31711])</onfocus>
+		<onfocus>Skin.SetString(CircleEpisodeOption.Source,LatestEpisode.%d)</onfocus>
+		<onfocus>Skin.SetString(CircleAlbumOption.Name,$LOCALIZE[31725] $LOCALIZE[31711])</onfocus>
+		<onfocus>Skin.SetString(CircleAlbumOption.Source,LatestAlbum.%d)</onfocus>
+		<onfocus>Skin.Reset(CircleExitMenu.Enable)</onfocus>
 	</include>
 
 	<include name="AddonSettingsForSkinSettings" description="Background Skin Settings">
@@ -45,6 +87,11 @@
 		<onfocus>Skin.SetBool(PlayerArtwork.Visible)</onfocus>
 		<onfocus>Skin.SetBool(MediaIcons.Visible)</onfocus>
 		<onfocus>Skin.SetBool(NoInformationLabel.Visible)</onfocus>
+	</include>
+    
+	<include name="DebugSettingsForSkinSettings" description="Debug Skin Settings">
+		<onfocus>Skin.Reset(DebugGrid.Visible)</onfocus>
+		<onfocus>Skin.Reset(DebugInfo.Visible)</onfocus>
 	</include>
     
 	<include file="SkinSettings_HomeMenu.xml" />
