@@ -8,7 +8,7 @@
 			<posx>681</posx>
 			<posy>300</posy>
 			
-			<control type="group" description="Background For Context Menu">
+			<control type="group" description="Context Menu Background">
 				<control type="image">
 					<posx>-30</posx>
 					<posy>-30</posy>
