@@ -167,7 +167,7 @@
             <visible>Container(300).HasFocus(15) + IsEmpty(Window.Property(NextAired.1.NextDate))</visible>
 			<label>-</label>
 			<label2>-</label2>
-			<icon>-</icon>
+			<icon>circle/tvshows-fallback.jpg</icon>
             <property name="BackgroundImage">-</property>
 			<onclick>Noop</onclick>
 		</item>
