@@ -893,6 +893,16 @@
 				<selected>Skin.HasSetting(ExitOption.Active)</selected>
 				<onclick>Skin.ToggleSetting(ExitOption.Active)</onclick>
 			</control>
+            
+			<control type="button" id="250" description="Reset Page Setting Button">
+				<width>1100</width>
+				<align>left</align>
+				<label>$LOCALIZE[10041]</label>
+				<onclick>SetProperty(DialogTitle,$LOCALIZE[31898],1189)</onclick>
+				<onclick>SetProperty(DialogMessage,$LOCALIZE[31899],1189)</onclick>
+				<onclick>SetProperty(DialogAction,SetFocus(52),1189)</onclick>
+				<onclick>ActivateWindow(1189)</onclick>
+			</control>
 		</control>
                 
 		<control type="scrollbar" id="299" description="Scrollbar">
@@ -1019,6 +1029,11 @@
 				<visible>Control.HasFocus(294)</visible>
 				<font>AnnotationFont</font>
 				<label>31187</label>
+			</control>
+			<control type="textbox">
+				<visible>Control.HasFocus(250)</visible>
+				<font>AnnotationFont</font>
+				<label>$LOCALIZE[31897]</label>
 			</control>
 		</control>
     </include>
