@@ -283,6 +283,9 @@
 	<string id="31894">Custom Submenu Editor</string>
 	<string id="31895">Menu title</string>
 	<string id="31896">Menu identifier</string>
+	<string id="31897">Reset all the settings on this page to their default values.</string>
+	<string id="31898">Settings Reset Confirmation</string>
+	<string id="31899">Are you sure that you want to reset these settings to their default values?</string>
 	
 	<!-- Signs / Icons / Short Label Text -->
 	<string id="31900">Items</string>
