@@ -1,8 +1,9 @@
 ﻿[B]0.3.4[/B]
 
-- Added help-texts to all custom option-related dialogs.
 - Added three more custom options in the Home Menu among the pre-existing options Videos, Music, and Pictures.
-- Added and replaced some artwork, mostly icons (media-flagging).
+- Added help-texts to all custom option-related dialogs.
+- Added and replaced some artwork, mostly icons (media-flagging) and images for the Home Menu circle.
+- Added 'reset to default'-buttons to all the Revolve skin settings-windows.
 - Fixed some bugs.
 
 [B]0.3.3[/B]
